Bug 154171 - UI Bogus error message with PDF encryption and PDF/UA enabled
Summary: UI Bogus error message with PDF encryption and PDF/UA enabled
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.6.0 target:7.5.3
Keywords: implementationError
Depends on:
Blocks:
 
Reported: 2023-03-13 18:44 UTC by Gabor Kelemen (Collabora)
Modified: 2023-04-12 22:10 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the error message (76.15 KB, image/png)
2023-03-13 18:44 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-03-13 18:44:33 UTC
Created attachment 185937 [details]
Screenshot of the error message

When PDF encryption is enabled, then PDF/UA is enabled, a bogus error message is shown about PDF/A not supporting encryption.

1. With a new document, choose File - Export As - Export as PDF
2. On the General tab make sure to have the "Archive (PDF/A, ISO 19005)" and the "Universal Accessibility (PDF/UA)" boxes unchecked
3. On the Security tab press the Set Passwords button
4. Set some file open password
5. Go to the General tab and enable the Universal Accessibility box

-> an error message is shown saying "PDF/A does not allow encryption. The exported PDF will not be password protected".

Expected:
Since the PDF/A option was not enabled this warning should not be shown.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 288c0920a8475f9f2c537212e04aa7649192ad8c
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: default

Seems to have started with

https://cgit.freedesktop.org/libreoffice/core/commit/?id=5a7cfe98e96489b7fa19d286ddd1e8c8e591d7dd

pdf: Add option for PDF/UA to the PDF export dialog

i.e. with the implementation of the PDF/UA support box.
Comment 1 Commit Notification 2023-03-14 09:39:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/847f836c047152b6202b9ee28020df5e87eeba2f

tdf#154171 filter: PDF export dialog: don't show spurious error if PDF/UA toggled

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Michael Stahl 2023-03-14 11:24:32 UTC
fixed on master
Comment 3 Commit Notification 2023-03-14 15:13:20 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/f73fe2523981a72d7a68eef9823a68b57c63d88a

tdf#154171 filter: PDF export dialog: don't show spurious error if PDF/UA toggled

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gabor Kelemen (Collabora) 2023-04-12 22:10:48 UTC
Verified in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fc6806c4be8585ce0d35a6b581bf8b3dbf858500
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

No error message anymore.