tdf#154171 filter: PDF export dialog: don't show spurious error if PDF/UA toggled

1. Security tab, set permission password
2. General tab, disable PDF/UA
3. General tab, enable PDF/UA
4. spurious error dialog mentioning PDF/A, which is unrelated to PDF/UA

(regression from commit 5a7cfe98e96489b7fa19d286ddd1e8c8e591d7dd)

Change-Id: I742da1cd459919faeae53fc21e5f97ee6a7c6ffe
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148801
Tested-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 8465ce89f16a97f3227fae2e8d4042c2ea885ed8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148855
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>